--- a/Game.html
+++ b/Game.html
@@ -43,6 +43,8 @@
             <input placeholder="0: H; 1: V" type="number" id="patrol-input-is-vertical" min="0" max="1" required><br>
     
             <button type="submit">Start Game</button>
+            <br>
+            <button id="random_player_ships" type="button">Random Places</button>
         </form>
         <div>
             <h2>Computer Board</h2>
