--- a/Game.html
+++ b/Game.html
@@ -49,6 +49,10 @@
         <div>
             <h2>Computer Board</h2>
             <div id="computer-board"></div>
+            <div id="power_btns">
+                <button id="double_shot_btn" type="button">D</button>
+                <button id="nuc_shot" type="button">N</button>
+            </div>
         </div>
 
     </div>
