--- a/Game.html
+++ b/Game.html
@@ -50,8 +50,8 @@
             <h2>Computer Board</h2>
             <div id="computer-board"></div>
             <div id="power_btns">
-                <button id="double_shot_btn" type="button">D</button>
-                <button id="nuc_shot" type="button">N</button>
+                <button id="double_shot_btn" type="button"><img src="./assets/multi_shot.png"></button>
+                <button id="nuc_shot" type="button"><img src="./assets/nuc.png"></button>
             </div>
         </div>
 
