Deleted useless elements from UI

--- a/Game.html
+++ b/Game.html
@@ -21,7 +21,7 @@
             <label>Horizontal Position: </label>
             <input placeholder="←→" type="number" id="carrier-input-y" min="0" max="9" required>
             <label>Orientation</label>
-            <select placeholder="0: H; 1: V" type="number" id="carrier-input-is-vertical" required>
+            <select id="carrier-input-is-vertical" required>
                 <option value=0>Horizontal</option>
                 <option value=1>Vertical</option>
             </select><br>
@@ -33,7 +33,7 @@
             <label>Horizontal Position: </label>
             <input placeholder="←→" type="number" id="battleship-input-y" min="0" max="9" required>
             <label>Orientation</label>
-            <select placeholder="0: H; 1: V" type="number" id="battleship-input-is-vertical" min="0" max="1" required>
+            <select id="battleship-input-is-vertical" required>
                 <option value=0>Horizontal</option>
                 <option value=1>Vertical</option>
             </select><br>
@@ -45,7 +45,7 @@
             <label>Horizontal Position: </label>
             <input placeholder="←→" type="number" id="destroyer-input-y" min="0" max="9" required>
             <label>Orientation</label>
-            <select placeholder="0: H; 1: V" type="number" id="destroyer-input-is-vertical" min="0" max="1" required>
+            <select id="destroyer-input-is-vertical" required>
                 <option value=0>Horizontal</option>
                 <option value=1>Vertical</option>
             </select><br>
@@ -57,7 +57,7 @@
             <label>Horizontal Position: </label>
             <input placeholder="←→" type="number" id="submarine-input-y" min="0" max="9" required>
             <label>Orientation</label>
-            <select placeholder="0: H; 1: V" type="number" id="submarine-input-is-vertical" min="0" max="1" required>
+            <select id="submarine-input-is-vertical" required>
                 <option value=0>Horizontal</option>
                 <option value=1>Vertical</option>
             </select><br>
@@ -69,7 +69,7 @@
             <label>Horizontal Position: </label>
             <input placeholder="←→" type="number" id="patrol-input-y" min="0" max="9" required>
             <label>Orientation</label>
-            <select placeholder="0: H; 1: V" type="number" id="patrol-input-is-vertical" min="0" max="1" required>
+            <select id="patrol-input-is-vertical" required>
                 <option value=0>Horizontal</option>
                 <option value=1>Vertical</option>
             </select><br>
